--- a/Web Mining and Applied NLP (44-620)/Module 3/pyplot.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 3/pyplot.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,7 @@
     "\n",
     "print('X values are {x}')\n",
     "plt.plot(x,y)\n",
+    "plt.close()\n",
     "\n",
     "print('Test')\n",
     "plt.scatter(y, x)"
