Update Pogue - Module 4 - Homework.ipynb

--- a/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
@@ -9,7 +9,7 @@
     "## Requests, JSON, and NLP\n",
     "\n",
     "### Student Name: Michael Pogue\n",
-    "### Github Link: \n",
+    "### Github Link: https://github.com/MichaelPogue/Northwest-Missouri-State-University/tree/main/Web%20Mining%20and%20Applied%20NLP%20(44-620)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -29,14 +29,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Could frame thy fearful symmetry?\n",
+      "\n",
+      "In what distant deeps or skies\n",
+      "Burnt the fire of thine eyes?\n",
+      "On what wings dare he aspire?\n",
+      "What the hand dare seize the fire?\n",
+      "\n",
+      "And what shoulder and what art\n",
+      "Could twist the sinews of thy heart?\n",
+      "And, when thy heart began to beat,\n",
+      "What dread hand and what dread feet?\n",
+      "\n",
+      "What the hammer?  what the chain?\n",
+      "In what furnace was thy brain?\n",
+      "What the anvil? what dread grasp\n",
+      "Dare its deadly terrors clasp?\n",
+      "\n",
+      "When the stars threw down their spears,\n",
+      "And watered heaven with their tears,\n",
+      "Did he smile his work to see?\n",
+      "Did he who made the lamb make thee?\n",
+      "\n",
+      "Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Dare frame thy fearful symmetry?\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
-    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul').text)\n"
+    "AUTHOR='William Blake'\n",
+    "POEM = 'The Tyger'\n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
+    "result = json.loads(requests.get(URL).text)\n",
+    "poem = '\\n'.join(result[0]['lines']) \n",
+    "\n",
+    "print(result)\n",
+    "print(poem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lyrics': 'Here the lyrics of the song'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
    ]
   },
   {
@@ -84,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +160,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
+   }
   }
  },
  "nbformat": 4,
