--- a/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
@@ -24,20 +24,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 1\n",
+    "\n",
     "1. The following code accesses the [lyrics.ovh](https://lyricsovh.docs.apiary.io/#reference/0/lyrics-of-a-song/search) public api, searches for the lyrics of a song, and stores it in a dictionary object.  Write the resulting json to a file (either a JSON file or a pickle file; you choose). You will read in the contents of this file for future questions so we do not need to frequently access the API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "import json\n",
+    "\n",
+    "AUTHOR='William Blake'\n",
+    "POEM = 'The Tyger'\n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
+    "result = json.loads(requests.get(URL).text)\n",
+    "poem = '\\n'.join(result[0]['lines'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2\n",
+    "\n",
+    "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
-      "Tyger, tyger, burning bright\n",
+      "Lyrics in json: [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}], \n",
+      "\n",
+      "Lyrics printed: Tyger, tyger, burning bright\n",
       "In the forests of the night,\n",
       "What immortal hand or eye\n",
       "Could frame thy fearful symmetry?\n",
@@ -70,50 +101,37 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import json\n",
+    "print(f'Lyrics in json: {result}, \\n\\nLyrics printed: {poem}')\n",
     "\n",
-    "AUTHOR='William Blake'\n",
-    "POEM = 'The Tyger'\n",
-    "\n",
-    "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
-    "result = json.loads(requests.get(URL).text)\n",
-    "poem = '\\n'.join(result[0]['lines']) \n",
-    "\n",
-    "print(result)\n",
-    "print(poem)"
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text = str(result)\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "doc = nlp(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lyrics': 'Here the lyrics of the song'}\n"
+      "Polarity Score: -0.14506172839506173\n"
      ]
     }
    ],
    "source": [
-    "print(result)"
+    "print('Polarity Score:', doc._.blob.polarity)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
+    "bla blah"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
