--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -2,26 +2,250 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\":\"You are not subscribed to this API.\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://theaudiodb.p.rapidapi.com/discography.php\"\n",
+    "\n",
+    "querystring = {\"s\":\"coldplay\"}\n",
+    "\n",
+    "headers = {\n",
+    "\t\"X-RapidAPI-Key\": \"5b87183879msh90a5c5be79bc69fp1cd460jsnd5789fe26044\",\n",
+    "\t\"X-RapidAPI-Host\": \"theaudiodb.p.rapidapi.com\"\n",
+    "}\n",
+    "\n",
+    "response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'results': {'result': {'song': 'Forever Young',\n",
+       "   'song-link': 'https://www.lyrics.com/lyric/8237688',\n",
+       "   'artist': 'Johnny Cash',\n",
+       "   'artist-link': 'https://www.lyrics.com/artist/Johnny%20Cash/1548',\n",
+       "   'album': 'The Legend [Columbia]',\n",
+       "   'album-link': 'https://www.lyrics.com/album/784490'}}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "\t\"results\": {\n",
+    "\t\t\"result\": {\n",
+    "\t\t\t\"song\": \"Forever Young\",\n",
+    "\t\t\t\"song-link\": \"https://www.lyrics.com/lyric/8237688\",\n",
+    "\t\t\t\"artist\": \"Johnny Cash\",\n",
+    "\t\t\t\"artist-link\": \"https://www.lyrics.com/artist/Johnny%20Cash/1548\",\n",
+    "\t\t\t\"album\": \"The Legend [Columbia]\",\n",
+    "\t\t\t\"album-link\": \"https://www.lyrics.com/album/784490\"\n",
+    "\t\t}\n",
+    "\t}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39;49mloads(requests\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39mhttp://api.chartlyrics.com/apiv1.asmx/SearchLyric?artist=string&song=string\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mtext)\n",
+      "File \u001b[1;32mc:\\Users\\Michael\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    341\u001b[0m     s \u001b[39m=\u001b[39m s\u001b[39m.\u001b[39mdecode(detect_encoding(s), \u001b[39m'\u001b[39m\u001b[39msurrogatepass\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    343\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m parse_float \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_pairs_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_decoder\u001b[39m.\u001b[39;49mdecode(s)\n\u001b[0;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    348\u001b[0m     \u001b[39mcls\u001b[39m \u001b[39m=\u001b[39m JSONDecoder\n",
+      "File \u001b[1;32mc:\\Users\\Michael\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    332\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, s, _w\u001b[39m=\u001b[39mWHITESPACE\u001b[39m.\u001b[39mmatch):\n\u001b[0;32m    333\u001b[0m     \u001b[39m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[39m    containing a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraw_decode(s, idx\u001b[39m=\u001b[39;49m_w(s, \u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mend())\n\u001b[0;32m    338\u001b[0m     end \u001b[39m=\u001b[39m _w(s, end)\u001b[39m.\u001b[39mend()\n\u001b[0;32m    339\u001b[0m     \u001b[39mif\u001b[39;00m end \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(s):\n",
+      "File \u001b[1;32mc:\\Users\\Michael\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\json\\decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    353\u001b[0m     obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscan_once(s, idx)\n\u001b[0;32m    354\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m--> 355\u001b[0m     \u001b[39mraise\u001b[39;00m JSONDecodeError(\u001b[39m\"\u001b[39m\u001b[39mExpecting value\u001b[39m\u001b[39m\"\u001b[39m, s, err\u001b[39m.\u001b[39mvalue) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m    356\u001b[0m \u001b[39mreturn\u001b[39;00m obj, end\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": [
+    "result = json.loads(requests.get('http://api.chartlyrics.com/apiv1.asmx/SearchLyric?artist=string&song=string').text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Could frame thy fearful symmetry?\n",
+      "\n",
+      "In what distant deeps or skies\n",
+      "Burnt the fire of thine eyes?\n",
+      "On what wings dare he aspire?\n",
+      "What the hand dare seize the fire?\n",
+      "\n",
+      "And what shoulder and what art\n",
+      "Could twist the sinews of thy heart?\n",
+      "And, when thy heart began to beat,\n",
+      "What dread hand and what dread feet?\n",
+      "\n",
+      "What the hammer?  what the chain?\n",
+      "In what furnace was thy brain?\n",
+      "What the anvil? what dread grasp\n",
+      "Dare its deadly terrors clasp?\n",
+      "\n",
+      "When the stars threw down their spears,\n",
+      "And watered heaven with their tears,\n",
+      "Did he smile his work to see?\n",
+      "Did he who made the lamb make thee?\n",
+      "\n",
+      "Tyger, tyger, burning bright\n",
+      "In the forests of the night,\n",
+      "What immortal hand or eye\n",
+      "Dare frame thy fearful symmetry?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "import json\n",
+    "\n",
+    "AUTHOR='William Blake'\n",
+    "POEM = 'The Tyger'\n",
+    "\n",
+    "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
+    "result = json.loads(requests.get(URL).text)\n",
+    "poem = '\\n'.join(result[0]['lines'])\n",
+    "\n",
+    "print(poem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.14506172839506173\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text = str(result)\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "print(doc._.blob.polarity)\n",
+    "# -0.125\n",
+    "\n",
+    "#print(doc._.blob.subjectivity)\n",
+    "# 0.9\n",
+    "\n",
+    "#print(doc._.blob.sentiment_assessments.assessments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [23], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m text \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(result)\n\u001b[0;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m token \u001b[39min\u001b[39;00m text:\n\u001b[1;32m----> 6\u001b[0m     \u001b[39mprint\u001b[39m(token\u001b[39m.\u001b[39;49mtext)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "text = str(result)\n",
+    "for token in text:\n",
+    "    print(token.text)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6fb9f77d385cdce896bcee24dd661783a34b4fa8d32f9ba566c167e870729f07"
+    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
    }
   }
  },
