--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -111,45 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Could frame thy fearful symmetry?\n",
-      "\n",
-      "In what distant deeps or skies\n",
-      "Burnt the fire of thine eyes?\n",
-      "On what wings dare he aspire?\n",
-      "What the hand dare seize the fire?\n",
-      "\n",
-      "And what shoulder and what art\n",
-      "Could twist the sinews of thy heart?\n",
-      "And, when thy heart began to beat,\n",
-      "What dread hand and what dread feet?\n",
-      "\n",
-      "What the hammer?  what the chain?\n",
-      "In what furnace was thy brain?\n",
-      "What the anvil? what dread grasp\n",
-      "Dare its deadly terrors clasp?\n",
-      "\n",
-      "When the stars threw down their spears,\n",
-      "And watered heaven with their tears,\n",
-      "Did he smile his work to see?\n",
-      "Did he who made the lamb make thee?\n",
-      "\n",
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Dare frame thy fearful symmetry?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import spacy\n",
@@ -161,9 +125,7 @@
     "\n",
     "URL = f'https://poetrydb.org/author,title/{AUTHOR};{POEM}'\n",
     "result = json.loads(requests.get(URL).text)\n",
-    "poem = '\\n'.join(result[0]['lines'])\n",
-    "\n",
-    "print(poem)"
+    "poem = '\\n'.join(result[0]['lines'])"
    ]
   },
   {
@@ -226,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -240,12 +202,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
+    "hash": "0ae41e45250eb696c2277dfbd939b9be222f957334433f60364f37f2e4b8f76d"
    }
   }
  },
