--- a/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
@@ -24,21 +24,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 1\n",
-    "\n",
     "1. The following code accesses the [lyrics.ovh](https://lyricsovh.docs.apiary.io/#reference/0/lyrics-of-a-song/search) public api, searches for the lyrics of a song, and stores it in a dictionary object.  Write the resulting json to a file (either a JSON file or a pickle file; you choose). You will read in the contents of this file for future questions so we do not need to frequently access the API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import spacy\n",
-    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "import json\n",
+    "import spacy \n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
     "AUTHOR='William Blake'\n",
     "POEM = 'The Tyger'\n",
@@ -52,85 +50,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2\n",
-    "\n",
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lyrics in json: [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}], \n",
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
       "\n",
-      "Lyrics printed: Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Could frame thy fearful symmetry?\n",
+      "Raw polarity Score: -0.14506172839506173 \n",
+      "Polarity Score: -0.15\n",
       "\n",
-      "In what distant deeps or skies\n",
-      "Burnt the fire of thine eyes?\n",
-      "On what wings dare he aspire?\n",
-      "What the hand dare seize the fire?\n",
-      "\n",
-      "And what shoulder and what art\n",
-      "Could twist the sinews of thy heart?\n",
-      "And, when thy heart began to beat,\n",
-      "What dread hand and what dread feet?\n",
-      "\n",
-      "What the hammer?  what the chain?\n",
-      "In what furnace was thy brain?\n",
-      "What the anvil? what dread grasp\n",
-      "Dare its deadly terrors clasp?\n",
-      "\n",
-      "When the stars threw down their spears,\n",
-      "And watered heaven with their tears,\n",
-      "Did he smile his work to see?\n",
-      "Did he who made the lamb make thee?\n",
-      "\n",
-      "Tyger, tyger, burning bright\n",
-      "In the forests of the night,\n",
-      "What immortal hand or eye\n",
-      "Dare frame thy fearful symmetry?\n"
+      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
      ]
     }
    ],
    "source": [
-    "print(f'Lyrics in json: {result}, \\n\\nLyrics printed: {poem}')\n",
+    "print(result)\n",
     "\n",
     "nlp = spacy.load('en_core_web_sm')\n",
     "text = str(result)\n",
     "nlp.add_pipe(\"spacytextblob\")\n",
-    "doc = nlp(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Polarity Score: -0.14506172839506173\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Polarity Score:', doc._.blob.polarity)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "bla blah"
+    "doc = nlp(text)\n",
+    "p_score = doc._.blob.polarity\n",
+    "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
+    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
    ]
   },
   {
@@ -164,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -178,11 +128,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "af31991c939d0d47fd88192dde140282c60bcd0650d9319c70f9d5b7f17cd661"
+    "hash": "0ae41e45250eb696c2277dfbd939b9be222f957334433f60364f37f2e4b8f76d"
    }
   }
  },
