--- a/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Pogue - Module 4 - Homework.ipynb
@@ -55,14 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "Original Document: \n",
+      " [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "\n",
+      "Count of text: 946. Count of doc: 285\n",
       "\n",
       "Raw polarity Score: -0.14506172839506173 \n",
       "Polarity Score: -0.15\n",
@@ -72,15 +75,19 @@
     }
    ],
    "source": [
-    "print(result)\n",
-    "\n",
     "nlp = spacy.load('en_core_web_sm')\n",
     "text = str(result)\n",
     "nlp.add_pipe(\"spacytextblob\")\n",
     "doc = nlp(text)\n",
     "p_score = doc._.blob.polarity\n",
+    "\n",
+    "print('Original Document: \\n', doc)\n",
+    "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
     "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
-    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
+    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')\n",
+    "\n",
+    "\n",
+    "### QUESTION ----->>>> is a poem ok given the example, lyrics.ovh api not working can we stick with poem?\n"
    ]
   },
   {
