--- a/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
+++ b/Web Mining and Applied NLP (44-620)/Module 4/Test Bin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
     "import json\n",
     "import spacy \n",
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "from spacy.tokens import Doc\n",
     "\n",
     "AUTHOR='William Blake'\n",
     "POEM = 'The Tyger'\n",
@@ -37,38 +38,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'config'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m apikey\n\u001b[0;32m      3\u001b[0m text \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mThe Text API is super easy to use and super useful for anyone who needs to do text processing. It\u001b[39m\u001b[39m'\u001b[39m\u001b[39ms the best Text Processing web API and allows you to do amazing NLP without having to download or manage any models.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m headers \u001b[39m=\u001b[39m {\n\u001b[0;32m      5\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mContent-Type\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mapplication/json\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      6\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mapikey\u001b[39m\u001b[39m\"\u001b[39m: apikey\n\u001b[0;32m      7\u001b[0m }\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Document: \n",
+      " [{'title': 'The Tyger', 'author': 'William Blake', 'lines': ['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  what the chain?', 'In what furnace was thy brain?', 'What the anvil? what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n",
+      "\n",
+      "Count of text: 946. Count of doc: 285\n",
+      "\n",
+      "Raw polarity Score: -0.14506172839506173 \n",
+      "Polarity Score: -0.15\n",
+      "\n",
+      "With a score of -0.15, we have a slightly negative yet almost neutural text reaction.\n"
      ]
     }
    ],
    "source": [
-    "from config import apikey\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "text = str(result)\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "doc = nlp(text)\n",
+    "p_score = doc._.blob.polarity\n",
     "\n",
-    "text = \"The Text API is super easy to use and super useful for anyone who needs to do text processing. It's the best Text Processing web API and allows you to do amazing NLP without having to download or manage any models.\"\n",
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\",\n",
-    "    \"apikey\": apikey\n",
-    "}\n",
-    "body = {\n",
-    "    \"text\": text\n",
-    "}\n",
-    "url = \"https://app.thetextapi.com/text/text_polarity\"\n",
-    " \n",
-    "response = requests.post(url, headers=headers, json=body)\n",
-    "polarity = json.loads(response.text)[\"text polarity\"]\n",
-    "print(polarity)"
+    "print('Original Document: \\n', doc)\n",
+    "print(f'\\nCount of text: {len(text)}. Count of doc: {len(doc)}')\n",
+    "print(f'\\nRaw polarity Score: {p_score} \\nPolarity Score: {round(p_score, 2)}')\n",
+    "print('\\nWith a score of -0.15, we have a slightly negative yet almost neutural text reaction.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "t\n",
+      "i\n",
+      "t\n",
+      "l\n",
+      "e\n",
+      "'\n",
+      ":\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in text[0:10]:\n",
+    "    print (token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "{\n",
+      "'\n",
+      "title\n",
+      "'\n",
+      ":\n",
+      "'\n",
+      "The\n",
+      "Tyger\n",
+      "'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc[0:10]:\n",
+    "    print (token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title':\n",
+      "'The\n",
+      "Tyger',\n",
+      "'author':\n",
+      "'William\n",
+      "Blake',\n",
+      "'lines':\n",
+      "['Tyger,\n",
+      "tyger,\n",
+      "burning\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in text.split()[:10]:\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines':\n",
+      "['Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Could frame thy fearful symmetry?', '', 'In what distant deeps or skies', 'Burnt the fire of thine eyes?', 'On what wings dare he aspire?', 'What the hand dare seize the fire?', '', 'And what shoulder and what art', 'Could twist the sinews of thy heart?', 'And, when thy heart began to beat,', 'What dread hand and what dread feet?', '', 'What the hammer?  \n",
+      "what the chain?', 'In what furnace was thy brain?', 'What the anvil?\n",
+      "what dread grasp', 'Dare its deadly terrors clasp?', '', 'When the stars threw down their spears,', 'And watered heaven with their tears,', 'Did he smile his work to see?', 'Did he who made the lamb make thee?', '', 'Tyger, tyger, burning bright', 'In the forests of the night,', 'What immortal hand or eye', 'Dare frame thy fearful symmetry?'], 'linecount': '24'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sent in doc.sents:\n",
+    "    print(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sentence1 \u001b[39m=\u001b[39m doc\u001b[39m.\u001b[39;49msents[\u001b[39m0\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(sentence1)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "sentence1 = doc.sents[0]\n",
+    "print(sentence1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'The Tyger', 'author': 'William Blake', 'lines':\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence1 = list(doc.sents)[0]\n",
+    "print(sentence1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
